# SystemTelemetry

./: .clang-format  .clang-tidy  .clangd  .cpp-format  .cpp-format-ignore  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  Makefile  README.md  architecture.txt  architecture_graph.cmd  build.cmd  build_maps.cmd  check_architecture.cmd  devenv.cmd  devenv.md  devenv.txt  format.cmd  install.cmd  lint.cmd  package.cmd  profile_benchmark.cmd  release.cmd  specifications.txt  test.cmd  update_app_icon.cmd  update_readme_images.cmd  vcpkg-configuration.json  vcpkg.json  web-build.cmd
.claude/: settings.local.json
.codex/environments/: environment.toml
.githooks/: pre-commit
.github/workflows/: format-lint-tidy.yml  full-tidy.yml  pages.yml  release.yml  size-map-artifacts.yml  validation.yml
cmake/: CaseDashVersion.cmake
cmake/vcpkg-ports/tree-sitter-cpp/: CMakeLists.txt  casedash-grammar.patch  generate_case_dash_macro_config.js  portfile.cmake  unpack_tree_sitter_cli.js  vcpkg.json
docs/: animation.md  architecture.md  architecture.txt  build.md  changelog.md  config_meta_gen.md  diagnostics.md  diagnostics.txt  format.md  format_performance_journal.md  format_review_log.md  glossary.md  hardware-dependency-interface.md  hardware.md  layout.md  layout.txt  layout_edit.md  layout_guide_sheet.md  optimize_size.md  profile_benchmark.md  project.md  project.txt  release.md  source_policy_guardrails.md  specifications.md  specifications.txt  theme_configuration.md  web.md
docs/architecture/: config.md  dashboard.md  dashboard_renderer.md  diagnostics.md  display.md  headless.md  layout_edit.md  layout_edit_dialog.md  layout_guide_sheet.md  layout_model.md  main.md  renderer.md  telemetry.md  util.md  vendor.md  widget.md
docs/performance/: asus-gu603vi-intel-uhd-rtx4070.md  gigabyte-x570i-amd-rx6800.md  lenovo-lnvnb161216-intel-uhd-gtx1650ti.md  msi-z690-carbon-wifi-nvidia-rtx3080.md
installer/: CaseDash.Installer.wixproj  CaseDashExitDialog.wxs  InstallDirNoLicense.wxs  Product.wxs
resources/: CaseDash.manifest  CaseDash.manifest.in  CaseDash.rc  CaseDashVersion.rc.in  SystemTelemetry.manifest  SystemTelemetry.rc  config.ini  localization.ini  resource.h
src/: GigabyteFanProbe.cs  GigabyteSivProbe.cs  app_autostart.cpp  app_command_line.cpp  app_config_io.cpp  app_config_io.h  app_constants.h  app_diagnostics.cpp  app_diagnostics.h  app_display_config.cpp  app_display_config.h  app_main.cpp  app_monitor.cpp  app_monitor.h  app_paths.cpp  app_paths.h  app_platform.cpp  app_platform.h  app_shared.h  app_startup.cpp  app_startup.h  app_strings.cpp  app_strings.h  app_types.h  app_win32_ui.cpp  app_win32_ui.h  board_gigabyte_siv.cpp  board_vendor.cpp  board_vendor.h  config.cpp  config.h  config.ini  config_parser.cpp  config_parser.h  config_resolution.cpp  config_resolution.h  config_schema.h  config_writer.cpp  config_writer.h  dashboard_app.cpp  (+94 more)
src/autostart/: autostart.cpp  autostart.h
src/config/: color_expression.cpp  color_expression.h  color_format.cpp  color_format.h  color_math.cpp  color_resolver.cpp  color_resolver.h  config.cpp  config.h  config_desc.h  config_file_io.cpp  config_file_io.h  config_io.cpp  config_io.h  config_parser.cpp  config_parser.h  config_primitives.cpp  config_primitives.h  config_resolution.cpp  config_resolution.h  config_runtime_fields.cpp  config_runtime_fields.h  config_schema.h  config_telemetry.cpp  config_telemetry.h  config_writer.cpp  config_writer.h  diagnostics_options.cpp  diagnostics_options.h  metric_board_binding.cpp  metric_board_binding.h  metric_catalog.cpp  metric_catalog.h  metric_display_style.h  telemetry_settings.h  widget_class.h
src/dashboard/: autostart.cpp  autostart.h  constants.h  dashboard_app.cpp  dashboard_app.h  dashboard_controller.cpp  dashboard_controller.h  dashboard_menu_format.cpp  dashboard_menu_format.h  dashboard_menu_types.h  dashboard_metrics.cpp  dashboard_overlay_state.cpp  dashboard_overlay_state.h  dashboard_shell_ui.cpp  dashboard_shell_ui.h  dashboard_titlebar.cpp  dashboard_titlebar.h  dashboard_tooltip.cpp  dashboard_tooltip.h  dashboard_window_chrome.cpp  dashboard_window_chrome.h  fps_service.cpp  (+5 more)
tests/: animation_timeline_tests.cpp  app_icon_renderer_tests.cpp  benchmarks.cpp  board_metric_binding_tests.cpp  card_chrome_layout_tests.cpp  config_meta_tests.cpp  config_parser_tests.cpp  config_resolution_tests.cpp  config_writer_tests.cpp  dashboard_metrics_tests.cpp  dashboard_titlebar_tests.cpp  dashboard_widget_class_tests.cpp  diagnostics_options_tests.cpp  display_menu_options_tests.cpp  drive_usage_list_widget_tests.cpp  enum_string_tests.cpp  font_anchor_tests.cpp  fps_service_protocol_tests.cpp  hardware_vendor_selection_tests.cpp  layout_drag_profile_benchmark.cpp  layout_edit_benchmark.cpp  layout_edit_commands_tests.cpp  layout_edit_controller_tests.cpp  layout_edit_hit_test_tests.cpp  layout_edit_parameter_apply_tests.cpp  layout_edit_tooltip_tests.cpp  layout_edit_tree_tests.cpp  layout_edit_types_tests.cpp  layout_guide_sheet_planner_tests.cpp  layout_snap_solver_tests.cpp  localization_catalog_tests.cpp  metric_list_widget_tests.cpp  metrics_tests.cpp  render_thread_tests.cpp  resource_loader_test_stub.cpp  snapshot_dump_tests.cpp  system_info_support_tests.cpp  telemetry_network_source_tests.cpp  telemetry_retained_history_tests.cpp  telemetry_runtime_tests.cpp  (+4 more)
tools/: analyze_link_map.py  check_architecture.py  check_includes.py  check_source_policy.py  compress_resources.py  config_meta_gen.py  extract_config_section.py  format_config.json  generate_installer_dialog_bmp.ps1  generate_readme_images.ps1  lint_check.py  lint_config.json  optimize_png_resources.py  pre_commit_checks.ps1  pre_commit_format.ps1  profile_benchmark_daemon.ps1  regenerate_tree_sitter_grammar.py  release_changelog.ps1  release_changelog_report.ps1  run_clang_format.ps1  run_clang_tidy.ps1  run_clangd_includes.ps1  run_clangd_includes.py  source_dependency_graph.py  summarize_profile_hotspots.ps1  update_app_icon.ps1  update_readme_images.ps1
web/: index.html
(+510 files in other folders)
